sandbox/output
TicketDispenserTest.java:51: error: cannot find symbol
        MockTurnNumberSequence mockTurnNumberSequence = new MockTurnNumberSequence();
        ^
  symbol:   class MockTurnNumberSequence
  location: class TicketDispenserTest
TicketDispenserTest.java:51: error: cannot find symbol
        MockTurnNumberSequence mockTurnNumberSequence = new MockTurnNumberSequence();
                                                            ^
  symbol:   class MockTurnNumberSequence
  location: class TicketDispenserTest
2 errors
